# flash-tokenizer

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.ja-JP.md  README.ko-KR.md  README.md  README.zh-CN.md  SETUP.md  UPLOAD.md  build.bat  build.command  build.sh  data_loader.py  download_dataset.sh  main.cpp  pyproject.toml  requirements.txt  sample.py  update_version.py
dataset/: DATA.md  DATA.zh-CN.md  README.md
dataset/config/bert-base-multilingual-uncased/: tokenizer.json
dataset/config/kcbert-base/: tokenizer_config.json
dataset/config/llmlingua-2-bert-base-multilingual-cased-meetingbank/: tokenizer_config.json
dataset/data/: download.bat  download.sh
dataset/kc_bert/: gt_404464.txt  titles_404464.txt  vocab_char_16424.txt
dataset/kcbert_base/: download.bat  download.sh  tokenizer_config.json
docs/: BUILD_whl.md  PERFORMANCE.md  README.md  SETUP.md  SETUP_zh-CN.md  UPLOAD.md
include/: allocator.h  basic_tokenizer.h  bert_tokenizer.h  bert_tokenizer_cuda.cuh  charmap.h  config.h  cuda_tokenizer.h  debugging.h  defines.h  env.h  functions.h  thread_pool.h  timer.h  trie.h  version.h  vocab.h  wordpiece_tokenizer.h  wordpiecebackward_tokenizer.h
package_build/: install_miniconda.bat  install_miniconda.command  install_miniconda.sh
perftest/: PERFTEST.md  PERFTEST.zh-CN.md  accuracy_test.py  metrics.py  performance_test.py  performance_test_mt.py  setup.sh  show_parquet.py
perftest/bert_tokenizer/: __init__.py  bert_tokenizer_blingfire.py  bert_tokenizer_flash.py  bert_tokenizer_huggingface.py  bert_tokenizer_original.py  bert_tokenizer_paddlenlp.py  bert_tokenizer_rust.py  bert_tokenizer_tensorflow.py  config.py
prj/: CMakeLists.txt  MANIFEST.in  README.md  USAGE.md  USAGE.zh-CN.md  build.bat  build.sh  cibuildwheel.toml  pyproject.toml
prj/include/: basic_tokenizer.h  bert_tokenizer.h  charmap.h  debugging.h  defines.h  env.h  functions.h  trie.h  version.h  vocab.h  wordpiece_tokenizer.h  wordpiecebackward_tokenizer.h
prj/python/flash_tokenizer/: __init__.py  batch_encoding.py  bert_tokenizer_flash.py  bert_tokenizer_original.py  config.py
prj/python/src/: bindings.cpp
prj/src/: bert_tokenizer.cpp
python/: test_tokenizer.py
python/flash_tokenizer/: __init__.py  batch_encoding.py  bert_tokenizer_flash.py
python/src/: bindings.cpp
sample/: sample01.py  sample02.py  sample03.py  sample04.py
src/: bert_tokenizer.cpp  bert_tokenizer_cuda.cu  bert_tokenizer_cuda_simple.cu  cuda_tokenizer.cpp  cuda_tokenizer_kernel.cu
