[build-system]
requires = ["scikit-build-core>=0.4.3", "pybind11>=2.10.0"]
build-backend = "scikit_build_core.build"

[project]
name = "flash-tokenizer"
version = "0.7.0"
description = "FlashBertTokenizer implementation with C++ backend"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "spring", email = "springnode@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/springkim/flash-tokenizer"
Issues = "https://github.com/springkim/flash-tokenizer/issues"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
