[build-system]
requires = ["scikit-build-core>=0.4.3", "pybind11>=2.10.0"]
build-backend = "scikit_build_core.build"

[project]
name = "flash_tokenizer"
version = "1.1.9"
description = "Extremely fast bert tokenizer"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "spring", email = "springnode@gmail.com" }
]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "numpy>=1.24.0",
]


[project.urls]
Homepage = "https://github.com/NLPOptimize/flash-tokenizer"
Issues = "https://github.com/NLPOptimize/flash-tokenizer/issues"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
cmake.build-type = "Release"
cmake.define.CMAKE_CXX_STANDARD = "17"

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "*.pyo", "*.so", "*.pyd", "__pycache__"]