[build-system]
requires = ["scikit-build-core>=0.4.3", "pybind11>=2.10.0"]
build-backend = "scikit_build_core.build"

[project]
name = "flash_tokenizer"
version = "1.2.0"
description = "Extremely fast bert tokenizer"
readme = "USAGE.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["Bert", "Tokenizer", "BertTokenizer", "Wordpiece", "Flash",
    "pybind11", "c++", "bindings", "extension", "performance",
    "nlp", "natural-language-processing", "tokenizer", "transformers", "text-processing"]
authors = [
    { name = "spring", email = "springnode@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Programming Language :: C++ :: 17",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS"
]
dependencies = [
    "numpy>=1.24.0",
    "requests",
]


[project.urls]
Homepage = "https://github.com/NLPOptimize/flash-tokenizer"
Issues = "https://github.com/NLPOptimize/flash-tokenizer/issues"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
cmake.build-type = "Release"
cmake.define.CMAKE_CXX_STANDARD = "17"

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "*.pyo", "*.so", "*.pyd", "__pycache__"]